--- a/public/index.html
+++ b/public/index.html
@@ -25,6 +25,22 @@
             </form>
         </div>
         <div class="col">
+            <h2>SignUp</h2>
+            <form class="form" onsubmit="javascript: signUp(event);">
+                <div class="form-group">
+                    <label>Name</label>
+                    <input type="text" name="name" class="form-control" placeholder="Enter name.">
+                </div>
+                <div class="form-group">
+                    <label>Email</label>
+                    <input type="email" name="email" class="form-control" placeholder="Enter email.">
+                </div>
+                <div class="form-group">
+                    <label>Password</label>
+                    <input type="password" name="password" class="form-control" placeholder="Enter password.">
+                </div>
+                <button type="submit" class="btn btn-primary">Sign Up</button>
+            </form>
         </div>
         <div class="col">
         </div>
