--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" type="text/css" href="/assets/css/bootstrap.min.js">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 </head>
+<!-- WELCOME TEMPLATE -->
 <template id="welcome_template">
     <div class="row">
         <div class="col">
@@ -45,6 +46,9 @@
         <div class="col">
         </div>
     </div>
+</template>
+<!-- HOME TEMPLATE -->
+<template id="home_template">
 </template>
 
 <body>
