--- a/public/index.html
+++ b/public/index.html
@@ -49,6 +49,11 @@
 </template>
 <!-- HOME TEMPLATE -->
 <template id="home_template">
+    Welcome Home
+    <div id="groups"></div>
+</template>
+<template>
+    Welcome group
 </template>
 
 <body>
@@ -56,8 +61,8 @@
     <script type="text/javascript" src="/assets/js/router.js"></script>
     <script type="text/javascript" src="/assets/js/script.js"></script>
     <script type="text/javascript" src="/assets/js/user.js"></script>
-    <script type="text/javascript" src="/assets/js/messages.js"></script>
-    <script type="text/javascript" src="/assets/js/groups.js"></script>
+    <script type="text/javascript" src="/assets/js/message.js"></script>
+    <script type="text/javascript" src="/assets/js/group.js"></script>
 </body>
 
 </html>
