--- a/public/index.html
+++ b/public/index.html
@@ -3,9 +3,8 @@
 
 <head>
     <title>Application</title>
-    <link rel="stylesheet" type="text/css" href="/assets/css/bootstrap.min.js">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 </head>
+<link rel="stylesheet" href="/assets/css/bootstrap.min.css">
 <!-- WELCOME TEMPLATE -->
 <template id="welcome_template">
     <div class="row">
@@ -52,7 +51,7 @@
     Welcome Home
     <div id="groups"></div>
 </template>
-<template>
+<template id="group_template">
     Welcome group
 </template>
 
