--- a/public/index.html
+++ b/public/index.html
@@ -70,7 +70,15 @@
 </template>
 <!-- GROUP TEMPLATE -->
 <template id="group_template">
-    Welcome group
+    <div class="row">
+        <div class="col">
+            <h2>Group Members</h2>
+            <div id="groupMembers"></div>
+        </div>
+        <div class="col">
+            <div id="groupStatus"></div>
+        </div>
+    </div>
 </template>
 
 <body>
